--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Power drink</title>
+    <title>About Us</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
@@ -37,16 +37,18 @@
           </div>
         </div>
       </nav>
-    <div id="image">
-    <img src="images\3475758-removebg-preview.png" class="animate__animated animate__bounceInDown animate__slower">
+    
+    <div class="about">
+Welcome to Power Energy Drink, where we believe in harnessing the exhilarating force of nature to fuel your vitality and propel you towards success. Our premium energy drink is carefully crafted to provide an unparalleled boost, invigorating your body and mind with refreshing intensity.
+<br><br>
+At Power Energy Drink, we understand the demands of a fast-paced lifestyle and the need for sustained energy throughout the day. That's why our specially formulated blend combines potent ingredients that awaken your senses, enhance focus, and deliver a surge of power when you need it most.
+<br><br>
+Indulge in the invigorating flavors that dance on your taste buds, as our drink electrifies your senses and revives your spirit. Whether you're an athlete seeking that extra push, a busy professional looking to stay sharp, or a student in pursuit of peak performance, Power Energy Drink is your ultimate companion.
+<br><br>
+But it's not just about the boost; we are committed to quality and your well-being. Our drink is meticulously crafted with premium ingredients, ensuring that you receive only the best. We prioritize your health and vitality by avoiding artificial additives, offering a beverage that fuels you with natural energy, without compromising on taste.
+<br><br>
+Join the Power Energy Drink movement and unlock your full potential. Embrace the refreshing intensity that surges through every sip, giving you the edge to conquer challenges, embrace opportunities, and achieve your goals.
+<br><br>
+Experience the power within you with Power Energy Drink. Ignite your passion, seize the moment, and soar to new heights. It's time to elevate your energy and embrace life's exhilarating possibilities. Unleash the extraordinary with Power Energy Drink - where refreshing intensity meets unstoppable drive.
     </div>
-    <div>
-        <h6 id="tagline" class="animate__animated animate__lightSpeedInLeft animate__delay-2s">Experience the Refreshing Intensity of Power Energy Drink and Unleash Your Potential!</h6>
-    </div>
-    <button class="btn btn-success animate__animated animate__lightSpeedInLeft animate__delay-3s buynow" style="background-color:rgb(0, 221, 4);">
-        <a class="nav-link active" href="#">Buy Now</a>
-    </button>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
-</html>
