--- a/customer.html
+++ b/customer.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Power drink</title>
+    <title>Customer Support</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
@@ -37,16 +37,19 @@
           </div>
         </div>
       </nav>
-    <div id="image">
-    <img src="images\3475758-removebg-preview.png" class="animate__animated animate__bounceInDown animate__slower">
-    </div>
-    <div>
-        <h6 id="tagline" class="animate__animated animate__lightSpeedInLeft animate__delay-2s">Experience the Refreshing Intensity of Power Energy Drink and Unleash Your Potential!</h6>
-    </div>
-    <button class="btn btn-success animate__animated animate__lightSpeedInLeft animate__delay-3s buynow" style="background-color:rgb(0, 221, 4);">
-        <a class="nav-link active" href="#">Buy Now</a>
-    </button>
+    
+    <form id="form">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name" required><br><br>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="message">Message:</label><br>
+        <textarea id="message" name="message" rows="4" required></textarea><br><br>
+
+        <button class="btn btn-success" style="background-color:rgb(0, 221, 4);">
+            <a class="nav-link active" href="#">Submit</a>
+        </button>
+    </form>
 </body>
-</html>
