--- a/about.html
+++ b/about.html
@@ -51,4 +51,6 @@ Join the Power Energy Drink movement and unlock your full potential. Embrace the
 <br><br>
 Experience the power within you with Power Energy Drink. Ignite your passion, seize the moment, and soar to new heights. It's time to elevate your energy and embrace life's exhilarating possibilities. Unleash the extraordinary with Power Energy Drink - where refreshing intensity meets unstoppable drive.
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>
+</html>
